force-app/main/default/objects/Contact/fields/Account_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Account_Bill_To__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Bill To #</label>
    <type>Text</type>
</CustomField>