force-app/main/default/objects/Contact/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <description>Text value of the contact&apos;s account to use in as display in the marketing enrollment screen flow. Formula field created to improve performance and avoid a SOQL query in the flow by having to record lookup the contact&apos;s account id&apos;s name.</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Formula</label>
    <type>Text</type>
</CustomField>