force-app/main/default/objects/Contact/fields/Account_SysDivBillTo__c.field-meta.xml
<CustomField>
    <fullName>Account_SysDivBillTo__c</fullName>
    <description>Use to add SysDivBillTo field for Contact Search Layout results</description>
    <formula>IF(Account.Legacy_System_Cd__c=&quot;03&quot;, &quot;SW&quot;
&amp;&quot; &quot;&amp; Account.Legacy_Division_Cd__c &amp;&quot; &quot;&amp; Account.AccountNumber, 
Account.Legacy_System_Cd__c &amp;&quot; &quot;&amp; Account.Legacy_Division_Cd__c &amp;&quot; &quot;&amp; Account.AccountNumber)</formula>
    <label>Account SysDivBillTo</label>
    <type>Text</type>
</CustomField>