force-app/main/default/objects/Contact/fields/Add_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Add_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field is used for a quick action on the lead for users to be able to select an active promotion.</description>
    <label>Add Promotion</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>