force-app/main/default/objects/Contact/fields/ADDED_ON_DATE__c.field-meta.xml
<CustomField>
    <fullName>ADDED_ON_DATE__c</fullName>
    <label>ADDED_ON_DATE</label>
    <type>Date</type>
</CustomField>