force-app/main/default/objects/Contact/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Administrative (Purchasing)</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Ultimate Authority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>