force-app/main/default/objects/Contact/fields/Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Email__c</fullName>
    <description>Email address for the assistant to the Contact.</description>
    <label>Assistant Email</label>
    <type>Email</type>
</CustomField>