force-app/main/default/objects/Contact/fields/Bypass_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For use with apex updates. This checkbox can be used in a validation rule to bypass the validation for any system updates.</description>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>