force-app/main/default/objects/Contact/fields/Capabilities_Visualized__c.field-meta.xml
<CustomField>
    <fullName>Capabilities_Visualized__c</fullName>
    <label>Capabilities Visualized</label>
    <type>TextArea</type>
</CustomField>