force-app/main/default/objects/Contact/fields/CASL__c.field-meta.xml
<CustomField>
    <fullName>CASL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Canadian Anti-Spam Legislation - this box will be flagged if the contact has given expressed permission to receive emails from us.</description>
    <inlineHelpText>Check this box if this Canadian contact has give expressed permission to receive marketing emails from Veritiv.</inlineHelpText>
    <label>CASL</label>
    <type>Checkbox</type>
</CustomField>