force-app/main/default/objects/Contact/fields/CASL_Date__c.field-meta.xml
<CustomField>
    <fullName>CASL_Date__c</fullName>
    <description>Date the CASL flag was checked.</description>
    <label>CASL Date</label>
    <type>Date</type>
</CustomField>