force-app/main/default/objects/Contact/fields/CONFIRM_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CONFIRM_FLAG__c</fullName>
    <label>CONFIRM-FLAG</label>
    <length>5</length>
    <type>Text</type>
</CustomField>