force-app/main/default/objects/Contact/fields/CONFIRM_PRICE__c.field-meta.xml
<CustomField>
    <fullName>CONFIRM_PRICE__c</fullName>
    <label>CONFIRM_PRICE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>