force-app/main/default/objects/Contact/fields/Contact_owner_Acct_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_owner_Acct_Owner__c</fullName>
    <description>used for finding where contact owner equal or not equal to the owner of the Account</description>
    <formula>IF( OwnerId =  Account.Owner.Id , &quot;yes&quot;, &quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact owner = Acct Owner</label>
    <type>Text</type>
</CustomField>