force-app/main/default/objects/Contact/fields/Contact_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Active__c</fullName>
    <description>Created for Marketo so they can see if contact owner is active or not</description>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Active</label>
    <type>Checkbox</type>
</CustomField>