force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>This field is designed for the rep to select which role within the Account the client holds.</description>
    <inlineHelpText>Select all options that apply for the role this contact serves with Veritiv</inlineHelpText>
    <label>Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Primary Contact</fullName>
            </value>
            <value>
                <fullName>Signs Contract/Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Places Orders/CS Contact</fullName>
            </value>
            <value>
                <fullName>Pays Invoices/Billing Contact</fullName>
            </value>
            <value>
                <fullName>Receives Order/Warehouse Contact</fullName>
            </value>
            <value>
                <fullName>Other Administrative Contact</fullName>
            </value>
            <value>
                <fullName>eCommerce User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>