force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Power Sponsor</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Adversary</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>