force-app/main/default/objects/Contact/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Takes the value of the &apos;country&apos; field on the acocunt record</description>
    <formula>IF( 
ISBLANK(Primary_Sales_Rep_Name__c), Account.Country__c , TEXT(Primary_Sales_Rep_Name__r.Country__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>