force-app/main/default/objects/Contact/fields/Created_by_Quick_Create__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Quick_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Quick Create</label>
    <type>Checkbox</type>
</CustomField>