force-app/main/default/objects/Contact/fields/Customer_Decline_SOC__c.field-meta.xml
<CustomField>
    <fullName>Customer_Decline_SOC__c</fullName>
    <inlineHelpText>SOC = Sales Order Confirmation</inlineHelpText>
    <label>Customer Decline SOC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>