force-app/main/default/objects/Contact/fields/Customer_Provided_Segment_Interest__c.field-meta.xml
<CustomField>
    <fullName>Customer_Provided_Segment_Interest__c</fullName>
    <description>Segment of Interest Provided by the Customer</description>
    <inlineHelpText>Sugment of Interest provided by the customer.</inlineHelpText>
    <label>Customer Provided Segment Interest</label>
    <length>250</length>
    <type>Text</type>
</CustomField>