force-app/main/default/objects/Contact/fields/Customer_Provided_Segment_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Customer_Provided_Segment_of_Interest__c</fullName>
    <description>Segment of Interest provided by the Lead/Contact.</description>
    <inlineHelpText>Segment of Interest Provided by Lead/Contact.</inlineHelpText>
    <label>Customer Provided Segment Interest</label>
    <length>250</length>
    <type>Text</type>
</CustomField>