force-app/main/default/objects/Contact/fields/Decision_Criteria_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria_Requirements__c</fullName>
    <label>Decision Criteria/Requirements</label>
    <type>TextArea</type>
</CustomField>