force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Engineering/Lean Engineer</fullName>
            </value>
            <value>
                <fullName>Environmental Services (Custodial/EVS/Housekeeping)</fullName>
            </value>
            <value>
                <fullName>Estimating</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Infection Control</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Maintenance/Facility Manager</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations/Logistics/Shipping</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner/President</fullName>
            </value>
            <value>
                <fullName>Procurement/Purchasing</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Production/Manufacturing</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>