force-app/main/default/objects/Contact/fields/Detail_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Detail_Contact_Role__c</fullName>
    <description>This role is filled in from the Customer Onboarding and Credit Application Form Assembly forms.</description>
    <label>Detail Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Ordering</fullName>
            </value>
            <value>
                <fullName>Receives Confirmations</fullName>
            </value>
            <value>
                <fullName>Warehouse/Ops</fullName>
            </value>
            <value>
                <fullName>Dock Appointment</fullName>
            </value>
            <value>
                <fullName>eCom Approver</fullName>
            </value>
            <value>
                <fullName>eCom General</fullName>
            </value>
            <value>
                <fullName>eCom Catalog Browser</fullName>
            </value>
            <value>
                <fullName>Tax Contact</fullName>
            </value>
            <value>
                <fullName>AP Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>