force-app/main/default/objects/Contact/fields/Do_NOT_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_NOT_Send_Email__c</fullName>
    <inlineHelpText>Contact Marketing to ask for updates in this field.</inlineHelpText>
    <label>Do NOT Send These Email Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Satisfaction Survey</fullName>
            </value>
            <value>
                <fullName>Executive Communications</fullName>
            </value>
            <value>
                <fullName>Fuel Surcharge Announcement</fullName>
            </value>
            <value>
                <fullName>New Product Announcement</fullName>
            </value>
            <value>
                <fullName>New Promotion Announcement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>