force-app/main/default/objects/Contact/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <formula>MID(Email, FIND(&apos;@&apos;, Email, 1)+1, (LEN(Email) - FIND(&apos;@&apos;, Email, 1)+1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>