force-app/main/default/objects/Contact/fields/Education_Affiliations_Previous_Position__c.field-meta.xml
<CustomField>
    <fullName>Education_Affiliations_Previous_Position__c</fullName>
    <label>Education/Affiliations/Previous Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>