force-app/main/default/objects/Contact/fields/EI_Eloqua_Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>EI_Eloqua_Do_Not_Sync__c</fullName>
    <description>This field stores the variables that determine whether or not Eloqua should sync the contact.

NB: Logic before updating on 9/28:
or(   ISPICKVAL( Account.Active__c , &quot;No&quot;) ,
 Eloqua_Unmarketable_Checkbox__c = TRUE,
 HasOptedOutOfEmail = TRUE,
CONTAINS( LOWER (Email) ,&quot;veritivcorp.com&quot;),  
CONTAINS( LOWER (Email),&quot;fordis.ca&quot;), 
CONTAINS( LOWER (Email),&quot;fordis.com&quot;), 
CONTAINS( LOWER (Email),&quot;saalfeldcorp.com&quot;), 
CONTAINS( LOWER (Email),&quot;bulkleydunton.com&quot;), 
CONTAINS( LOWER (Email),&quot;mondrianhall.com&quot;), 
CONTAINS( LOWER (Email),&quot;xpedx.com&quot;), 
CONTAINS( LOWER (Email),&quot;unisourceworldwide.com&quot;), 
CONTAINS( LOWER (Email),&quot;unisourcelink.com&quot;), 
CONTAINS( LOWER (Email),&quot;unisource.ca&quot;),
CONTAINS( LOWER (Email),&quot;saalfeldre-d.com&quot;),
CONTAINS( LOWER (Email),&quot;graphiccommunications.com&quot;),
AND(  
LOWER(MailingCountry)&lt;&gt; &quot;usa&quot;, 
LOWER( MailingCountry) &lt;&gt; &quot;us&quot; ,
LOWER( MailingCountry) &lt;&gt; &quot;u.s.a.&quot;,
LOWER( MailingCountry) &lt;&gt; &quot;united states&quot;
))</description>
    <formula>or( ISPICKVAL( Account.Active__c , &quot;No&quot;) , 
 Eloqua_Unmarketable_Checkbox__c = TRUE, 
 RecordType.Id &lt;&gt; &quot;012700000009TSY&quot;, 
CONTAINS( LOWER (Email) ,&quot;veritivcorp.com&quot;), 
CONTAINS( LOWER (Email),&quot;fordis.ca&quot;), 
CONTAINS( LOWER (Email),&quot;fordis.com&quot;), 
CONTAINS( LOWER (Email),&quot;saalfeldcorp.com&quot;), 
CONTAINS( LOWER (Email),&quot;bulkleydunton.com&quot;), 
CONTAINS( LOWER (Email),&quot;mondrianhall.com&quot;), 
CONTAINS( LOWER (Email),&quot;xpedx.com&quot;), 
CONTAINS( LOWER (Email),&quot;unisourceworldwide.com&quot;), 
CONTAINS( LOWER (Email),&quot;unisourcelink.com&quot;), 
CONTAINS( LOWER (Email),&quot;unisource.ca&quot;), 
CONTAINS( LOWER (Email),&quot;saalfeldre-d.com&quot;), 
CONTAINS( LOWER (Email),&quot;graphiccommunications.com&quot;), 
CONTAINS( LOWER (Email),&quot;a@b.com&quot;), 
CONTAINS( LOWER(Email),&quot;a.b@c.com&quot;),  
CONTAINS( LOWER(Email),&quot;fake.com&quot;), 
CONTAINS( LOWER(Email),&quot;tbd.com&quot;), 
CONTAINS( LOWER(Email),&quot;test.com&quot;), 
CONTAINS( LOWER(Email),&quot;michael.bacu@state.de.us&quot;), 
CONTAINS( LOWER(Email),&quot;rhonerw@ilga.gov&quot;), 
CONTAINS( LOWER(Email),&quot;jabrinson@ups.com&quot;), 
CONTAINS( LOWER(Email),&quot;david.mcgrain@nscorp.com&quot;), 
CONTAINS( LOWER(Email),&quot;smorris@dtiglobal.com&quot;), 
CONTAINS( LOWER(Email),&quot;cmurrell@crmail.k12.ar.us&quot;), 
CONTAINS( LOWER(Email),&quot;kgeletu@ups.com&quot;), 
CONTAINS( LOWER(Email),&quot;noemail&quot;), 
CONTAINS( LOWER(Email),&quot;unknown&quot;), 
Email = &quot;&quot;, 

Lower(FirstName) = &quot;test&quot;, 
Lower(LastName) = &quot;test&quot;, 

AND( 
LOWER(MailingCountry)&lt;&gt; &quot;usa&quot;, 
LOWER( MailingCountry) &lt;&gt; &quot;us&quot; , 
LOWER( MailingCountry) &lt;&gt; &quot;u.s.a.&quot;, 
LOWER( MailingCountry) &lt;&gt; &quot;united states&quot; 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Should Eloqua sync this contact?</inlineHelpText>
    <label>Mktg Automation - Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>