force-app/main/default/objects/Contact/fields/EI_Potential_Competitor_Contact__c.field-meta.xml
<CustomField>
    <fullName>EI_Potential_Competitor_Contact__c</fullName>
    <description>This field stores a set of email list domain names that determine if a contact works for a competitor.</description>
    <formula>OR( 
CONTAINS( Lower(Email) ,&quot;competitor.com&quot;), 
CONTAINS( Lower(Email) ,&quot;competitor.net&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines if the contact works for a potential competitor depending on his/her email address.</inlineHelpText>
    <label>Potential Competitor</label>
    <type>Checkbox</type>
</CustomField>