force-app/main/default/objects/Contact/fields/Eloqua_Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Lead_Rating__c</fullName>
    <inlineHelpText>Automatically populated from the Eloqua system.</inlineHelpText>
    <label>Mktg Automation Lead Rating</label>
    <length>2</length>
    <type>Text</type>
</CustomField>