force-app/main/default/objects/Contact/fields/Eloqua_Unmarketable_Date__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Unmarketable_Date__c</fullName>
    <description>Used with Eloqua integration - when a contact is marked &quot;unmarketable&quot; in Eloqua, it will pass the information to Salesforce. We will date/time stamp the &quot;eloqua unmarketable&quot; field on the Contact record and excluded any &quot;Unmarketable not equal to blank&quot; from being sent back to Eloqua through integration on Eloqua side.</description>
    <inlineHelpText>via Eloqua criteria</inlineHelpText>
    <label>Mktg Automation Unmarketable Date</label>
    <type>Date</type>
</CustomField>