force-app/main/default/objects/Contact/fields/Email_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent_Date__c</fullName>
    <description>Marketo - Email Consent Date.</description>
    <inlineHelpText>Marketo - Email Consent Date.</inlineHelpText>
    <label>Email Consent Date</label>
    <type>Date</type>
</CustomField>