force-app/main/default/objects/Contact/fields/Email_Consent_Explicit__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent_Explicit__c</fullName>
    <description>Marketo - Email Consent Explicit.</description>
    <inlineHelpText>If Yes, a person gave Veritiv permission to send electronic marketing messages per country or state legal regulations requiring consent (e.g. CASL and GDPR). Explicit expires once they unsubscribe.</inlineHelpText>
    <label>Email Consent Explicit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>