force-app/main/default/objects/Contact/fields/Email_Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Email_Status_Image__c</fullName>
    <description>This field is used to display an image on the record page layout under the email address based on whether or not the HasBounced__c field has a certain value.</description>
    <formula>IF(HasBounced__c = TRUE, &quot;This Email needs to be Updated&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The red message indicates we&apos;ve tried to email this user and received a bounce-back on the email.  Please check the email address and update it.</inlineHelpText>
    <label>Email Status</label>
    <type>Text</type>
</CustomField>