force-app/main/default/objects/Contact/fields/EVO_Key__c.field-meta.xml
<CustomField>
    <fullName>EVO_Key__c</fullName>
    <formula>Account.Evo_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EVO Key</label>
    <type>Text</type>
</CustomField>