force-app/main/default/objects/Contact/fields/External_ID_Email__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Email__c</fullName>
    <description>Equals email address.  Used for updating contact information via Data Loader.

Must first update this field (via data loader, equals email address)  each time before using as Unique ID.</description>
    <externalId>true</externalId>
    <label>External ID (Email)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>