force-app/main/default/objects/Contact/fields/First_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>First_Email_Body__c</fullName>
    <description>Contact field to replicate the Enrollment object functionality for easier sync with Marketo</description>
    <label>First Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>