force-app/main/default/objects/Contact/fields/FS_Gen_Interest_Mktg__c.field-meta.xml
<CustomField>
    <fullName>FS_Gen_Interest_Mktg__c</fullName>
    <description>Facilities Solutions General Interest - Marketing</description>
    <label>FS Gen Interest Mktg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>