force-app/main/default/objects/Contact/fields/Has_Email__c.field-meta.xml
<CustomField>
    <fullName>Has_Email__c</fullName>
    <formula>NOT(ISBLANK(Email) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Email</label>
    <type>Checkbox</type>
</CustomField>