force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the contact is no longer active.  This will enable the Inactive Reason field for you to give further detail.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>