force-app/main/default/objects/Contact/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <description>Date the status changes from active to inactive on contacts</description>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>