force-app/main/default/objects/Contact/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <inlineHelpText>Select the reason that the contact is no longer active.</inlineHelpText>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Inactive__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New role</fullName>
            </value>
            <value>
                <fullName>No longer at company</fullName>
            </value>
            <value>
                <fullName>Leave of absence</fullName>
            </value>
            <value>
                <fullName>Maternity leave</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>