force-app/main/default/objects/Contact/fields/iRep__c.field-meta.xml
<CustomField>
    <fullName>iRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>iRep</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>iRep Program Contacts</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>