force-app/main/default/objects/Contact/fields/IsPunchOutUser__c.field-meta.xml
<CustomField>
    <fullName>IsPunchOutUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Punch Out User</label>
    <type>Checkbox</type>
</CustomField>