force-app/main/default/objects/Contact/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Executive</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Supervisor/Manager</fullName>
            </value>
            <value>
                <fullName>Individual Contributor</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>