force-app/main/default/objects/Contact/fields/LAST_UPD_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_UPD_DATE__c</fullName>
    <label>LAST-UPD-DATE</label>
    <type>Date</type>
</CustomField>